--- a/cricket-roaster-app/app.json
+++ b/cricket-roaster-app/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "HelloWorld",
-    "slug": "HelloWorld",
+    "name": "cricket-roaster-app",
+    "slug": "cricket-roaster-app",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
