--- a/cricket-roaster-app/package.json
+++ b/cricket-roaster-app/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native-stack": "^7.8.2",
     "axios": "^1.13.2",
     "expo": "~54.0.25",
+    "expo-image-picker": "~17.0.9",
     "expo-status-bar": "~3.0.8",
     "react": "19.1.0",
     "react-native": "0.81.5",
